*Empty MediaWiki Message*

--- a/Nedersaksische_meziek.mw
+++ b/Nedersaksische_meziek.mw
@@ -1,10 +1,10 @@
 [[Bestaand:Gijsjolink.jpg|thumb|330px|Gijs Jolink van [[Jovink en de Voederbietels]]]]
-Mit '''Nedersaksische meziek''' wördt hier in de eerste plaatse muziek bedoeld mit teksten in 't [[Nedersaksisch]]; bi'j uutbreiding kan 't ok instrumentale meziek wèden die inspireerd is deur 't culturele arfgoed van de Nedersaksischtalige gebieden.
+Mit '''Nedersaksische muziek''' wördt hier in de eerste plaatse muziek bedoeld mit teksten in 't [[Nedersaksisch]]; bi'j uutbreiding kan 't ok instrumentale muziek wèden die inspireerd is deur 't culturele arfgoed van de Nedersaksischtalige gebieden.
 
 == Wörtels ==
 === Zingen in de standerdtaal of in de streektaal? ===
 ==== Prestige van 't Nederlaands ====
-'Van oldsher liekt d'r niet veule in de streektalen ezungen te wèden. Temiensen, uut 't vleden is weinig opbewaord', stelt hoogleraar liedcultuur [[Louis Peter Grijp]].<ref>Louis Peter Grijp (1995), [http://www.streektaalzang.nl/strk/pers/p95vkb21.htm 'Is zingen in dialect Normaal? Muziek, taal en regionale identiteit']. In ''"Zingen in een kleine taal". Volkskundig Bulletin'', jaorgaank 21, nommer 2, oktober: 'Van oudsher lijkt er niet veel in de streektalen te zijn gezongen. Althans, uit het verleden is er weinig bewaard, afgezien van dichters als Bredero en Vondel die weliswaar een aantal van hun liederen in dialect schreven (Waterlands), maar overwegend omwille van de satire. Ook volksliedonderzoekers konden relatief weinig liederen in de streektalen optekenen. Het volk sprak weliswaar dialect, maar zong in het Nederlands.'</ref> Al lange tied voert in de Nedersaksischtalige previncies 't Nederlaandstalige lied de boavenhaand (twintigste-eeuwse butenlaandse muzikale invloeden nog buten beschouwing laotend). Waor de streektaal veural töt 't informele gesprek in femilie- en vriendenkring beparkt bleef, had 't Nederlaands tezölfdertied in alderhaand berieken een (toenimmende) rolle, zoas op schoele en in de media. Zo had 't ok een rolle in de vörm van laandsbried oaveredragen kienderliedties (beveurbield ''Roodborstje tikt tegen 't raam'') en liedties mit historische motieven (beveurbield ''De Zilvervloot''). Dit giet mangs ok op veur liedties mit teksten die specifiek naor 't Nedersaksischtalig gebied verwiest, zoas [[Nedersaksische_volksleidjes#Berend_Botje|''Berend Botje'']], die uut varen gunk '' 'met zijn scheepje naar Zuidlaren'.'' 't Streektaallied zol daorentègen in de nègentiende eeuw in-evoerd wèden deur de schrievende elite.<ref>Louis Peter Grijp (1995), [http://www.streektaalzang.nl/strk/pers/p95vkb21.htm 'Is zingen in dialect Normaal? Muziek, taal en regionale identiteit']. In ''"Zingen in een kleine taal". Volkskundig Bulletin'', jaorgaank 21, nommer 2, oktober: 'Pas in de negentiende eeuw wordt het dialectlied geïntroduceerd en wel door de elite, die er een middel in zag een romantisch getinte regionale identiteit vorm te geven'.</ref><ref>Louis Peter Grijp (1996), [http://www.streektaalzang.nl/strk/pers/p96dlbr1.htm 'Van dialectlied tot boerenrock: Muziek en regionale identiteit']. In ''Constructie van het eigene. Culturele vormen van regionale identiteit in Nederland'' onder redactie van Carlo van der Borgt, Amanda Hermans en Hugo Jacobs, Amsterdam, SUN: 'De Brabantse volksliedonderzoeker Harrie Franken stelt dat gewone mensen niet bedreven waren in het dichten en dat degenen die het wel konden meestal het Nederlands verkozen omdat dat meer prestige had. Bovendien gaf de spelling van de streektaal problemen. [...] En als men al in het dialect zong, is dat vaak vertaald uit het Nederlands.'</ref> 't Was prestigieus um Nederlaandstalige liedties te kennen, in Nederlaand zölf zowal as in de [[Graofschop Benthem]], daoras de mèensen Nedersaksisch preutten, mar ok in 't Nederlaands en Hoogduuts zungen en riemden.<ref>Heinrich Hensen zien ''Aule Knetsååm vertäild'' (Heimatverein der Grafschaft Bentheim, 1976), een weergave van 't Graofschopper lèven van begun 20e eeuw, bevat varsies in 't Nederlaands, Graofschopper plat en Hoogduuts.</ref>
+'Van oldsher liekt d'r niet veule in de streektalen ezungen te wèden. Temiensen, uut 't vleden is weinig opbewaord', stelt hoogleraar liedcultuur [[Louis Peter Grijp]].<ref>Louis Peter Grijp (1995), [http://www.streektaalzang.nl/strk/pers/p95vkb21.htm 'Is zingen in dialect Normaal? Muziek, taal en regionale identiteit']. In ''"Zingen in een kleine taal". Volkskundig Bulletin'', jaorgaank 21, nommer 2, oktober: 'Van oudsher lijkt er niet veel in de streektalen te zijn gezongen. Althans, uit het verleden is er weinig bewaard, afgezien van dichters als Bredero en Vondel die weliswaar een aantal van hun liederen in dialect schreven (Waterlands), maar overwegend omwille van de satire. Ook volksliedonderzoekers konden relatief weinig liederen in de streektalen optekenen. Het volk sprak weliswaar dialect, maar zong in het Nederlands.'</ref> Al lange tied voert in de Nedersaksischtalige previncies 't Nederlaandstalige lied de boavenhaand (twintigste-eeuwse buitenlaandse muzikale invloeden nog buiten beschouwing laotend). Waor de streektaal veural töt 't informele gesprek in femilie- en vriendenkring beparkt bleef, had 't Nederlaands tezölfdertied in alderhaand berieken een (toenimmende) rolle, zoas op schoele en in de media. Zo had 't ok een rolle in de vörm van laandsbried oaveredragen kienderliedties (beveurbield ''Roodborstje tikt tegen 't raam'') en liedties mit historische motieven (beveurbield ''De Zilvervloot''). Dit giet mangs ok op veur liedties mit teksten die specifiek naor 't Nedersaksischtalig gebied verwiest, zoas [[Nedersaksische_volksleidjes#Berend_Botje|''Berend Botje'']], die uut varen gunk '' 'met zijn scheepje naar Zuidlaren'.'' 't Streektaallied zol daorentègen in de nègentiende eeuw in-evoerd wèden deur de schrievende elite.<ref>Louis Peter Grijp (1995), [http://www.streektaalzang.nl/strk/pers/p95vkb21.htm 'Is zingen in dialect Normaal? Muziek, taal en regionale identiteit']. In ''"Zingen in een kleine taal". Volkskundig Bulletin'', jaorgaank 21, nommer 2, oktober: 'Pas in de negentiende eeuw wordt het dialectlied geïntroduceerd en wel door de elite, die er een middel in zag een romantisch getinte regionale identiteit vorm te geven'.</ref><ref>Louis Peter Grijp (1996), [http://www.streektaalzang.nl/strk/pers/p96dlbr1.htm 'Van dialectlied tot boerenrock: Muziek en regionale identiteit']. In ''Constructie van het eigene. Culturele vormen van regionale identiteit in Nederland'' onder redactie van Carlo van der Borgt, Amanda Hermans en Hugo Jacobs, Amsterdam, SUN: 'De Brabantse volksliedonderzoeker Harrie Franken stelt dat gewone mensen niet bedreven waren in het dichten en dat degenen die het wel konden meestal het Nederlands verkozen omdat dat meer prestige had. Bovendien gaf de spelling van de streektaal problemen. [...] En als men al in het dialect zong, is dat vaak vertaald uit het Nederlands.'</ref> 't Was prestigieus um Nederlaandstalige liedties te kennen, in Nederlaand zölf zowal as in de [[Graofschop Benthem]], daoras de mèensen Nedersaksisch preutten, mar ok in 't Nederlaands en Hoogduuts zungen en riemden.<ref>Heinrich Hensen zien ''Aule Knetsååm vertäild'' (Heimatverein der Grafschaft Bentheim, 1976), een weergave van 't Graofschopper lèven van begun 20e eeuw, bevat varsies in 't Nederlaands, Graofschopper plat en Hoogduuts.</ref>
 
 ====Oost-Nederlaandse liedcultuur====
 Daorentègen stelt hoogleraar in de volkskunde en orale literetuur [[Jurjen van der Kooi]] det verzamelaars en onderzukers as [[Ate Doornbosch]] (geb. 1926) en [[J.G.M. Bartelink]] leuten zien 'hoe riek en edifferentieerd ok de Oost-Nederlandse liedcultuur was'.<ref>Jurjen van der Kooi (2008), 'Orale literatuur in Oost-Nederland'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum. Blz. 424-6</ref> Doornbosch had vanof 1957 een veulbeluusterd radiopregramma oaver mondeling oaverelèverde liedties, 'Onder de groene linde', en warkten vanof 1965 bi'j 't [[Nederlands Volksliedarchief]] van 't [[Meertens Instituut]]; Bartelink publiceerden ''Twents Volksleven. Liederen en dansen'' (Wassenaar, 1967). In dizze liedcultuur is de (West)nederlaandse inbreng groot, mar is ok een dudelijke [[Platduuts]]e invloed anwezig. Daans-, drink- en gelègenheidsliedties waren vake Nedersaksisch van taal. Verhalende (straat)liederen en ballades, al kwamen ze nogal ies uut Duutslaand, wördden haoste altied in 't Standaardnederlaands of in [[regiolect]]isch Nederlaands ezungen.
@@ -29,12 +29,12 @@ Dan bint d'r nog wat liedties die zo populair bint, zoas 't Grunningse ''[[Neder
 ===Uutgaves van Nedersaksische volksliedties===
 In naovolging op [[Westlaauwers Frais|Friestalige]] uutgaves verschenen d'r in Grunning een paar bundels mit varzen in 't [[Grunnegs|Grunnings]]: ''Grönneger Laidjes, verzaomeld deur J. Veltman'' (z.j.; herdrok uut 1930 mit pianobegeleiding) en ''Oude en Nieuwe Groninger Liederen'' van P. Groen (1930), in 1958 in twei dielen uutegèven as ''t Grunneger Zangbouk''. Daorin stunden onder meer een ''Grönneger Lijttien'' van rond 1840 en volksliedties uut de mondelinge oaverlèvering zoas ''[[Nedersaksische_volksleidjes#Ain_boer_wol_noar_zien_noaber_tou|Ain boer wol noar zien noaber tou]]''. In [[Drenthe]] verschenen ''10 Drentse liedjes'' van Het Lantschap 'Drenthe' (1948) en [[Jan Naarding]] zien ''Drents liedtiesboekien'' (1949). In [[Twente]] verzamelden G.J.M. Bartelink in ''Twents volksleven'' (1967) wiegeliedties, kiender- en spöllegiesliedties, wat liedties oaver spinnen en weven, brulfteliedties, aandere feestliedties en nog zo wat. In ''Hosse Bosse Teune'' (1972) verzamelden [[Henk Krosenbrink]] kienderliedties en spotliedties.
 
-===Zang, daans, instrementen===
+===Zang, daans, instrumenten===
 Een bulte van de oaverelèverde liedties wördt ezungen zunder instrumentale begeleiding. An d'aandere kaante is d'r ok traditionele meziek, zoas 't [[trekzak|accordeonspul]], daoras niet altied bi'j ezungen wördt. Harmonicadagen daoras mèensen mit mekare op de accordeon speult bint veural onder wat oldere mèensen populair.<ref>Zie beveurbield [http://www.accordeonklanken.nl 'Accordeonklanken'] en [http://www.harmonicahoek.nl/ 'De Harmonicahoek'].</ref> Bi'j sommige liedties, zoas 't Twèents/Achterhoekse ''[[Driekusman]]'', heurt vaste daansbewegings.
 
 Veul van de nègentiende- en twintigste-eeuwse volksliedties bint niet meer algemien bekend, ok niet in de regio daoras ze ontstaon bint. Bi'j 't in onbruuk raken van traditionele liedties speult mit det olders heur kiender de leste decennia miest in 't Nederlaands opvoedt en det d'r praktisch gien streektaalmeziek veur kiender is uutegèven (boeken, cd's, computerpregramma's bint in 't Nederlaands), mar ok det sociaole gebruken daoras vaste liedties bi'j ezungen wördden, zoas de [[spinnelied]]ties veur bi'j 't [[gespin]], bint verdwenen.
 
-==Nedersaksische meziek per genre==
+==Nedersaksische muziek per genre==
 [[Bestaand:Zendmast RTV-Oost (nachtfoto).jpg|thumb|150px|Zendmast van RTV Oost in [[Hengel (Oaveriessel)|Hengel]]. De regionaole radio is een belangriek kenaal veur streektaalmeziek.]]
 In de twintigste eeuw, mit een oplèving tègen 't end d'rvan, koomt zangers en groepen mit heur eigen streektaalliedties. Soms begunt ze mit teksten in 't Engels en/of Nederlaands (of doet ze d'r det naost), daoras ze een groter beriek mit hebt.
 
@@ -42,7 +42,7 @@ De regionaole radio en later tillevisie helpt um streektaalliedties onder de mè
 
 Regionaole orgenisaoties as de [[Iesselakkedemie]] en de [[Stellingwarver Schrieversronte]] perbeert muzikaanten ok te stimuleren um mit de eigen streektaal gangs te gaon.<ref>Mit de dvd [http://www.streektaalzang.nl/strk/over/fan/uutsprek.htm ''Uutsprèken''] (2006) beud de Iesselakkedemie liedties van elf artiesten in 't Sallaands, Noord-Oaveriessels en Urkers.</ref><ref>De Stellingwarver Schrieversronte orgeniseert 't festival [http://www.stellingwarfs.nl/ Stellingwarfpop], mit een pries veur de dri'j beste Stellingwarfstalige nommers.</ref>
 
-Meziek in 't Nedersaksisch maakt ze in een bulte stielen. 't Lèvenslied bint de mèensen drok op, mar sinds de Achterhoekse band [[Normaal]] (op-ericht in 1974) is d'r ok een starke rock-streuming. Dizze en aandere streumings wördt hieronder op alfabetische volgörde behaandeld.
+Muziek in 't Nedersaksisch maakt ze in een bulte stielen. 't Lèvenslied bint de mèensen drok op, mar sinds de Achterhoekse band [[Normaal]] (op-ericht in 1974) is d'r ok een starke rock-streuming. Dizze en aandere streumings wördt hieronder op alfabetische volgörde behaandeld.
 
 ===Folk===
 De folk, mit beveurbield de Grunneger band [[Törf (band)|Törf]] (op-ericht in 1973), richtten hum, bi'j gebrek an een eigen volksmuzikale tredisie, eerder op 't veurbield van folk in laanden as Engelaand en Ierlaand. Wal greep een band as Törf terogge op de Grunningstalige tredisie deur teksten van dichters as [[Jan Boer]] (1899-1983) en [[Simon van Wattum]] (1930-1995) te gebruken.
