*Empty MediaWiki Message*

--- a/Nedersaksische_meziek.mw
+++ b/Nedersaksische_meziek.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Gijsjolink.jpg|thumb|330px|Gijs Jolink van [[Jovink en de Voederbietels]]]]
-Met '''Nedersaksische muziek''' wördt hier in de eerste plaatse muziek bedoeld mit teksten in 't [[Nedersaksisch]]; bi'j uutbreiding kan 't ok instrumentale muziek wèden die inspireerd is deur 't culturele arfgoed van de Nedersaksischtalige gebieden.
+Met '''Nedersaksische muziek''' wördt hier in de eerste plaatse muziek bedoeld mit teksten in 't [[Nedersaksisch]]; bij uitbreiding kan 't ok instrumentale muziek wèden die inspireerd is deur 't culturele arfgoed van de Nedersaksischtalige gebieden.
 
 == Wörtels ==
 === Zingen in de standerdtaal of in de streektaal? ===
