/* Zang, daans instrumenten */

--- a/Nedersaksische_meziek.mw
+++ b/Nedersaksische_meziek.mw
@@ -29,7 +29,7 @@ Dan bint d'r nog wat liedties die zo populair bint, zoas 't Grunningse ''[[Neder
 ===Uutgaves van Nedersaksische volksliedties===
 In naovolging op [[Westlaauwers Frais|Friestalige]] uutgaves verschenen d'r in Grunning een paar bundels mit varzen in 't [[Grunnegs|Grunnings]]: ''Grönneger Laidjes, verzaomeld deur J. Veltman'' (z.j.; herdrok uut 1930 mit pianobegeleiding) en ''Oude en Nieuwe Groninger Liederen'' van P. Groen (1930), in 1958 in twei dielen uutegèven as ''t Grunneger Zangbouk''. Daorin stunden onder meer een ''Grönneger Lijttien'' van rond 1840 en volksliedties uut de mondelinge oaverlèvering zoas ''[[Nedersaksische_volksleidjes#Ain_boer_wol_noar_zien_noaber_tou|Ain boer wol noar zien noaber tou]]''. In [[Drenthe]] verschenen ''10 Drentse liedjes'' van Het Lantschap 'Drenthe' (1948) en [[Jan Naarding]] zien ''Drents liedtiesboekien'' (1949). In [[Twente]] verzamelden G.J.M. Bartelink in ''Twents volksleven'' (1967) wiegeliedties, kiender- en spöllegiesliedties, wat liedties oaver spinnen en weven, brulfteliedties, aandere feestliedties en nog zo wat. In ''Hosse Bosse Teune'' (1972) verzamelden [[Henk Krosenbrink]] kienderliedties en spotliedties.
 
-===Zang, daans, instrumenten===
+===Zang, daans instrumenten===
 Een bulte van de oaverelèverde liedties wördt ezungen zunder instrumentale begeleiding. An d'aandere kaante is d'r ok traditionele meziek, zoas 't [[trekzak|accordeonspul]], daoras niet altied bi'j ezungen wördt. Harmonicadagen daoras mèensen mit mekare op de accordeon speult bint veural onder wat oldere mèensen populair.<ref>Zie beveurbield [http://www.accordeonklanken.nl 'Accordeonklanken'] en [http://www.harmonicahoek.nl/ 'De Harmonicahoek'].</ref> Bi'j sommige liedties, zoas 't Twèents/Achterhoekse ''[[Driekusman]]'', heurt vaste daansbewegings.
 
 Veul van de nègentiende- en twintigste-eeuwse volksliedties bint niet meer algemien bekend, ok niet in de regio daoras ze ontstaon bint. Bi'j 't in onbruuk raken van traditionele liedties speult mit det olders heur kiender de leste decennia miest in 't Nederlaands opvoedt en det d'r praktisch gien streektaalmeziek veur kiender is uutegèven (boeken, cd's, computerpregramma's bint in 't Nederlaands), mar ok det sociaole gebruken daoras vaste liedties bi'j ezungen wördden, zoas de [[spinnelied]]ties veur bi'j 't [[gespin]], bint verdwenen.
