--- a/Lotte_van_der_Zee.mw
+++ b/Lotte_van_der_Zee.mw
@@ -1,5 +1,5 @@
 [[File:Lotte van der zee-1551957654.jpg|thumb|150px|Lotte van der Zee]]
-'''Lotte van der Zee''' ([[21 febrewaori|21 february]] [[1999]], [[Eanske|Enske]] - [[6 meert|6 maert]] [[2019]]) was et mooiste tener-wichy van [[Overiessel|Oaveryssel]], [[Neerlaand|Neaderland]] en de wearld (2016-'17). Sy wördden in mei 2016 töt ''[[Miss Beauty of Overijssel]]'' (juniorkategory) eköäsen, in september 2016 kreyg he de titel ''[[Miss Teen of the Netherlands]]'' en in augustus 2017 had he de titel ''[[Miss Teenager Universe]]'' te pakken. By de lätsten had he et teagen 33 missen uut andere landen up-enömmen. Sy was de earste europääske wat disse prys når [[Europa]] en Neaderland haalden.
+'''Lotte van der Zee''' ([[21 febrewaori|21 february]] [[1999]], [[Eanske|Enske]] - [[6 meert|6 maert]] [[2019]], [[München]]) was et mooiste tener-wichy van [[Overiessel|Oaveryssel]], [[Neerlaand|Neaderland]] en de wearld (2016-'17). Sy wördden in mei 2016 töt ''[[Miss Beauty of Overijssel]]'' (juniorkategory) eköäsen, in september 2016 kreyg he de titel ''[[Miss Teen of the Netherlands]]'' en in augustus 2017 had he de titel ''[[Miss Teenager Universe]]'' te pakken. By de lätsten had he et teagen 33 missen uut andere landen up-enömmen. Sy was de earste europääske wat disse prys når [[Europa]] en Neaderland haalden.
 
 February 2019 kreyg Van der Zee up wintersport een härtstilstand. See wör twey weaken lange kunstmåtig in [[koma]] hölden, wårnå he woonsdagåvend 6 maert uut de tyd köäm.
 
