--- a/Wisent.mw
+++ b/Wisent.mw
@@ -3,9 +3,9 @@
 De '''wisent''', ouk wal de '''europääske bison''' enöömd, is samen med de [[Amerikaanse bizon|amerikaanske bison]] de eynige twey noch leavende van de bison-geslächte. De wisent wördt up-edeyld in twey undersoorten: De [[Leeglaandwisent|laeglandbison]] (''Bison bonasus bonasus'') en de [[Kaukasiese wisent|kaukasiske bison]] (''Bison bonasus caucasicus''). De lätste is feitelik uut-estürven.
 
 ==Geskydenisse==
-Oorsprüngelik kümt de wisent vöär in West-, Midden- en Ousteuropa, ouk in [[Zweedn|Sweden]] en de [[Kaukasus|Kaukasus]]. In de 11. eywe leavden de wisent noch wal in de busken van Midden- en Ousteuropa, mar nådyn wördden der steads meyr land van ear of-ejat en wördden der machtig op ear ejaged döär mensken. Wat töt gevolge hadde dat de soorte sowat uutstürv in de 19. eywe. In 1919 wördden de lätste sporen van wilde wisenten evünden, ümdat der een eströypte wisent evünden wördden. Et [[oorbos van Białowieża]] was de steade wår as de lätste in et wild leavende laeglandwisent in vöärkwamt.
+Oorsprüngelik kümt de wisent vöär in West-, Midden- en Ousteuropa, ouk in [[Zweedn|Sweden]] en de [[Kaukasus|Kaukasus]]. In de 11. eywe leavden de wisent noch wal in de busken van Midden- en Ousteuropa, mar nådyn wördden der steads meyr land van ear of-ejat en wördden der machtig op ear ejaged döär mensken. Wat töt gevolge hadde dat de soorte sowat üütstürv in de 19. eywe. In 1919 wördden de lätste sporen van wilde wisenten evünden, ümdat der een eströypte wisent evünden wördden. Et [[oorbos van Białowieża]] was de steade wår as de lätste in et wild leavende laeglandwisent in vöärkwamt.
 
-So bettyn nå de Tweyde Wearldoorlog kwamen der wat belangryke lüde uut [[Polen]] by menare, en hebt se beslöäten med de lätste söäven wisenten, den in derentunen saten, een fokprogramma up te setten. Sogedöänig binnet se nu wear in Oust- en Middeneuropa uutesetten. Ouk kumt se nu wear up enkelte natuurreservåten in Neaderland vöär. Up 12 april 2016 binnet se ouk uutesetten up de [[Veluwe]].
+So bettyn nå de Tweyde Wearldoorlog kwamen der wat belangryke lüde üüt [[Polen]] by menare, en hebt se beslöäten med de lätste söäven wisenten, den in derentünen saten, een fokprogramma up te setten. Sogedöänig binnet se nu wear in Oust- en Middeneuropa uutesetten. Ouk kummet se nu wear up enkelte natuurreservåten in Neaderland vöär. Up 12 april 2016 binnet se ouk üütesetten up de [[Veluwe]].
 
 ==Gedrag==
 Wisenten binnet groute steavige hoovderen. Se künnet wal 3 meater lang en 2 meater in skofthöygte weasen. Derby künnet wisenten teagen de 1000 kilo weagen. Et binnet dan ouk de groutste en swårste landsoogderen van Europa. Se magget dan wal grout en swår weasen, mar künnet asnoch 60 kilometer de ure rennen. Se binnet neet so arg breyd, wårdår se makkelik tüsken de boumen döär loupen künnet. 
