*Empty MediaWiki Message*

--- a/Wisent.mw
+++ b/Wisent.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Vanatori_neamt.jpg|thumb|Twey wisenten]]
 [[Bestaand:Wisentkalb_Bison_bonasus_Wildpark_Poing-01.jpg|thumb|Wisentkalv]]
-De '''wisent''', ouk wal de '''europääske bison''' enöömd, is samen med de [[Amerikaanse bizon|amerikaanske bison]] de eynige twey noch leavende van de bison-geslächte. De wisent wördt up-edeyld in twey undersoorten: De [[Leeglaandwisent|laeglandbison]] (''Bison bonasus bonasus'') en de [[Kaukasiese wisent|kaukasiske bison]] (''Bison bonasus caucasicus''). De lätste is feitelik uut-estürven.
+De '''wisent''', ouk wal de '''europääske bison''' enöömd, is samen med de [[Amerikaanse bizon|amerikaanske bison]] de eynige twey noch leavende van de bison-geslächte. De wisent wördt up-edeyld in twey undersoorten: De [[Leeglaandwisent|laeglandbison]] (''Bison bonasus bonasus'') en de [[Kaukasiese wisent|kaukasiske bison]] (''Bison bonasus caucasicus''). De lätste is feitelik üüt-estürven.
 
 ==Geskydenisse==
 Oorsprüngelik kümt de wisent vöär in West-, Midden- en Ousteuropa, ouk in [[Zweedn|Sweden]] en de [[Kaukasus|Kaukasus]]. In de 11. eywe leavden de wisent noch wal in de busken van Midden- en Ousteuropa, mar nådyn wördden der steads meyr land van ear of-ejat en wördden der machtig op ear ejaged döär mensken. Wat töt gevolge hadde dat de soorte sowat üütstürv in de 19. eywe. In 1919 wördden de lätste sporen van wilde wisenten evünden, ümdat der een eströypte wisent evünden wördden. Et [[oorbos van Białowieża]] was de steade wår as de lätste in et wild leavende laeglandwisent in vöärkwamt.
