--- a/Wisent.mw
+++ b/Wisent.mw
@@ -8,9 +8,9 @@ Oorsprüngelik kümt de wisent vöär in West-, Midden- en Ousteuropa, ouk in [[
 So bettyn nå de Tweyde Wearldoorlog kwamen der wat belangryke lüde üüt [[Polen]] by menare, en hebt se beslöäten med de lätste söäven wisenten, den in derentünen saten, een fokprogramma up te setten. Sogedöänig binnet se nu wear in Oust- en Middeneuropa uutesetten. Ouk kummet se nu wear up enkelte natuurreservåten in Neaderland vöär. Up 12 april 2016 binnet se ouk üütesetten up de [[Veluwe]].
 
 ==Gedrag==
-Wisenten binnet groute steavige hoovderen. Se künnet wal 3 meater lang en 2 meater in skofthöygte weasen. Derby künnet wisenten teagen de 1000 kilo weagen. Et binnet dan ouk de groutste en swårste landsoogderen van Europa. Se magget dan wal grout en swår weasen, mar künnet asnoch 60 kilometer de ure rennen. Se binnet neet so arg breyd, wårdår se makkelik tüsken de boumen döär loupen künnet. 
+Wisenten bint groute steavige hoovderen. Se künnet wal 3 meater lang en 2 meater in skofthöygte weasen. Derby künnet wisenten teagen de 1000 kilo weagen. Et binnet dan ouk de groutste en swårste landsoogderen van Europa. Se magget dan wal grout en swår weasen, mar künnet asnoch 60 kilometer de ure rennen. Se bint neet so arg breyd, wårdår se makkelik tüsken de boumen döär loupen künnet. 
 
-Wisenten vrettet vöäl grös en blächys. Mar in de winter skrapet se et skörs van de boumen ümme te vretten. Wisenten binnet sociale küddederen. Se leavet in gruppen. De leider van de küdde is neet et starkste kearltyn, mar de oldste wisent. 'Leid-ko' wörd so eyne wal enöömd. Dissend bepålt wår as de grup up an gayt en wonneyr as se rüsten of vretten gåt. As de gröytte van de küdde tevöäle wördt, dan nemt eyne van de oldere wisenten een antal junge wisenten med, ümme sogedöänig dårmed een nye grup te förmen. 
+Wisenten vrettet vöäl grös en blächys. Mar in de winter skrapet se et skörs van de boumen ümme te vretten. Wisenten bint sociale küddederen. Se leavet in gruppen. De leider van de küdde is neet et starksten kearltyn, mar de oldste wisent. 'Leid-ko' wörd so eyne wal enöömd. Dissend bepålt wår as de grup up an geyt en wonneyr as se rüsten of vretten gåt. As de gröytte van de küdde tevöäle wördt, dan nemt eyne van de oldere wisenten een antal junge wisenten med, ümme sogedöänig dårmed een nye grup te förmen. 
 
 {{Dialekt|sdz||Nysassiske Skryvwyse}}
 
