--- a/Ree_(deer).mw
+++ b/Ree_(deer).mw
@@ -6,11 +6,11 @@ De '''rey''' ([[Latien]]: ''Capreolus capreolus'') is een [[hartachtigen|hertach
 Anders as med andere hertachtigen kumt der by de reybokken geyn groute geweien up den kop.
 
 ==Beskryving==
-De rey hevt een sandgeale töt roodbrune summervachte, in et winter is disse meyr grysbruun töt swarte klöyre. Vulwassen reyen hebbet geyn vlekken. De witte töt gealige rumpvlekke is düdelik te seen. By mannegys is disse vlekken in et summer årdig düdelik. De nöyse is swart en de kinne is wit. De start is årdig klein (twey töt vere centimeter lank) en alleyne te seen as he dret. In et winter stekt by et vrouwegy een bössy witte håren tüssen de achterpouten når achter, wat up een start lekt.
+De rey hevt een sandgeale töt roodbrune summervachte, in et winter is disse meyr grysbruun töt swarte klöyre. Vulwassen reyen hebbet geyn vlekken. De witte töt gealige rumpvlekke is düdelik te seen. By mannegys is disse vlekken in et summer årdig düdelik. De nöyse is swart en de kinne is wit. De start is årdig klein (twey töt vere centimeter lank) en alleyne te seen as he dret. In et winter stekt by et vrouwegy een bössy witte håren tüsken de achterpouten når achter, wat up een start lekt.
 
-Een vulwassen mannegy (reybok) hevt een simpel gewei, wat vake twey töt dree pünten hevt. Reybokken med vere of vyve pünten seet y mar heyl manks. Et gewey is vake 25 centimeter lank. In et winter gröit et gewei, en de basthüüd skuurt sy tüsken maert en juli der of. Tüsken oktober en januari geyt et gewei der of. Een enkel mål heb y der ouk een vrouwegy (reygeit)  by sitten dee een gewei up den kop hevt. Een junge reybok van een jår old med alleyne twey knöäpys wördt ouk wal een knopbok enöömd. Wonnneyr as et gewei der noch geyn vertakkingen up hevt, nöömt se den een spitser, den bint van de leavtyd üm en nåby twey jår. Een gavvel hevt eyne vertakking. Waart u der wal vöär dat y neet denkt dat et antal vertakkingen gelyke is an de leavtyd. Ouk eyne van een jår kan al een gavvelgewei of een sesendergewei up den kop hebben. Dit is arvelik en eförmed når de ümstandigheyden wår as een bok in sit. Oldere reybokken hebbet meystentyds een sesender, med twey of dree pünten. Up latere leavtyd sollen se wear een gewei krygen künnet sunder vertakkingen.
+Een vulwassen mannegy (reybok) hevt een simpel gewei, wat vake twey töt dree pünten hevt. Reybokken med vere of vyve pünten see y mar heyl manks. Et gewey is vake 25 centimeater lank. In et winter gröit et gewei, en de basthüüd skuurt sy tüsken maert en juli der of. Tüsken oktober en januari geyt et gewei der of. Een enkelte mål heb y der ouk een vrouwegy (reygeit)  by sitten dee een gewei up den kop hevt. Een junge reybok van een jår old med alleyne twey knöäpys wördt ouk wal een knopbok enöömd. Wonnneyr as et gewei der noch geyn vertakkings up hevt, nöömt se den een spitser, den bint van de leavtyd üm en nåby twey jår. Een gavvel hevt eyne vertakking. Waart u der wal vöär dat y neet denkt dat et antal vertakkingen gelyke is an de leavtyd. Ouk eyne van een jår kan al een gavvelgewei of een sesendergewei up den kop hebben. Dit is arvelik en eförmed når de ümstandigheyden wår as een bok in sit. Oldere reybokken hebbet meystentyds een sesender, med twey of dree pünten. Up latere leavtyd sollen se wear een gewei krygen künnet sunder vertakkingen.
 
-De rey hevt een kop-rumplängte van 95 töt 140 centimeter, een swöärte van 16 töt 35 gram en een skulderhöygte tüsken 60 en 90 centimeter. Mannegys bint oaver et algemeyn grouter as de vrouwegys. Mannegys hebbet emiddeld een skulderhöygte van 64 töt 67 centimeter, vrouwegys van 63 töt 67 centimeter.
+De rey hevt een kop-rumplängte van 95 töt 140 centimeter, een swöyrte van 16 töt 35 gram en een skulderhöygte tüsken 60 en 90 centimeater. Mannegys bint oaver et algemeyn grouter as de vrouwegys. Mannegys hebbet emiddeld een skulderhöygte van 64 töt 67 centimeater, vrouwegys van 63 töt 67 centimeater.
 
 ==Doon en låten==
 Reyen bint ''knabbelaars'': hy et brümmels, bessen, twygen, schöäten, knoppen en loten van strüken en boumen as rousenstrüken en koniveren, krüden, grös, blader, nöäten, paddenstolen en landbouwgewassen so as tülpen, grånen en kroppen. In et summer döt he synen buuk vul an junge bladtys, en in et harvest ouk med eikels, wår knöäpen en twygen in et winter meyr wörd egetten. Hy is der årdig verdacht up dat he alleyne de gesunde deylen van de planten up et. Tüsken etten en herkouwen sit meystentyds so beyty eyne (in et summer) töt twey üür (in et winter).
