--- a/Bloodmåne.mw
+++ b/Bloodmåne.mw
@@ -25,7 +25,7 @@ In vöäle oldere kulturen dachten sy dat wonneyr de måne (of de sünne) verdü
 So as by sünsverdüüsteringen döden de [[mayas]] een bülte kabaal maken, ümme de kwåde krachten van de måne vord te jagen.
 
 ===Te seen===
-In Neaderland was de lätste mål disse måne te seen up 27 juli 2018, tüsken 21:30 en 23:15 uur. Dit was ouk de längste vulleadige månsverdüüstering van de eywe. Mar et was, spytig, up vöäle steades amper an te seen döär bewulking.
+In Neaderland was de vöär lätste mål disse måne te seen up 27 juli 2018, tüsken 21:30 en 23:15 uur. Dit was ouk de längste vulleadige månsverdüüstering van de eywe. Mar et was, spytig, up vöäle steades amper an te seen döär bewulking.
 
 De twey volgende målen:
 * 21 januari 2019 – vulleadige månsverdüüstering
