*Empty MediaWiki Message*

--- a/Gaia-theorie.mw
+++ b/Gaia-theorie.mw
@@ -6,27 +6,27 @@ Lovelock is een unofhangelike weatenskapper (chemikus), ouk is he natuurbeskarme
 ==Teory==
 De Gaia Theory geyt der van dat wy et leaven neet bekyken müttet as lösse dinge. Mar dat alle molekulen, cellen, deren en ekosystemen by mekare as eyne leavende lichame seen müttet.
 
-De gode ümstandigheyden wat wy en andere deren nöydig bint, wörd emaakt döär leavende weysens. Planten maket byvöärbeyld lücht ümme in te ådemen. Et eyne deer hevt et ander as etten nöydig ümme te oaverleaven. Bynå al et [[stikstof]] en [[koolstofdiokside]] in de lücht, kümt of van wat vöärtyds eleaved hevt. Sunder leaven sol de Aerde der as [[Mars]] of [[Venus]] uutseen.
+De gode ümstandigheyden wat wy en andere deren nöydig bint, wörd emaakt döär leavende weysens. Planten maket byvöärbeyld lücht ümme in te ådemen. Et eyne deer hevt et ander as etten nöydig ümme te oaverleaven. Bynå al et [[stikstof]] en [[koolstofdiokside]] in de lücht, kümt of van wat vöärtydsk eleaved hevt. Sunder leaven sol de Aerde der as [[Mars]] of [[Venus]] üütseen.
 
-In de [[Evolutietheorie|evolutsy]] hebbet planten en deren de ümgeaving an ear doon anpassen. Mar andersümme bint de planten en de deren ouk an ear ümgeaving an gån anpassen. Dit hevt de evolutsy neet edåne, mar düt he altyden noch. 
+In de [[Evolutietheorie|evoluty]] hebbet planten en deren de ümgeaving an ear doon anpassen. Mar andersümme bint de planten en de deren ouk an ear ümgeaving an gån anpassen. Dit hevt de evoluty neet edåne, mar düt he altyden noch. 
 
-Up so wyse kün y Gaia (de Aerde) seen as eyn' leavend weysen. Et is jå net een lichame: et water bint de bloodvåten, de planten de lungene, de deren andere organen, de steyne de butte en de osonlåge de hüüd. Sy holdet ear de balans döär sich an mekare te skikken.  
+Up so wyse kün y Gaia (de Aerde) seen as een leavend weasen. Et is jå net een lichame: et water bint de bloodvåten, de planten de lungene, de deren andere organen, de steyne de bütte en de osonlåge de hüüd. Sy holdet ear de balans döär sich an mekare te skikken.  
 
-Der bint in et verleaden döär meteoryten dikke gaten ekummen de osonlåge in. Sülvs eyne wülke de [[Dinosaurussn|dino's]] döyd uutstarven. Mar dårnå hevt de ümgeaving dom verdan edåne med leaven döär te herstellen en sich an mekare te skikken.
+Der bint in et verleaden döär meteoryten dikke gaten ekummen de osonlåge in. Sülvs eyne wülke de [[Dinosaurussn|dino's]] döyd üütstarven. Mar dårnå hevt de ümgeaving dom verdan edåne med leaven döär te herstellen en sich an mekare te skikken.
 
 ===Madelyvyswearld===
-In 1983 hadden James Lovelock en Andrew Watson up de komputer een programma wårin se de teory nåmaken wolden. Hyrin hadden se een wearldty emaket, wat ümme een sünne hen draeiden, en wår as der allinnig madelyvys woont. So wolden se antounen ho as de aerde ait syn eavenwicht probeerd te holden.
+In 1983 hadden James Lovelock en Andrew Watson up de komputer een programma wårin se de teory nåmaken wolden. Hyrin hadden se een wearldtyn emaket, wat ümme een sünne hen dräiden, en wår as der allinnig madelyvys woanet. So wolden se antöänen ho as de aerde ait syn eavenwicht probeerd te holden.
 
-Up disse wearld bint der mar twey plantys: swarten en witten. De swarten künt good in kolde leaven en de witten müt vöäle sünlicht hebben. (Döär upnemmen of torügge kaatsen van et licht).
+Up disse wearld bint der mar twey plantys: swarten en witten. De swarten künnet good in kolde leaven en de witten müttet vöäle sünlicht hebben. (Döär upnemmen of torügge kaatsen van et licht).
 
-Wonneyr as de sünne disse wearld beskent, wörd et heter. Hyrdöär gröiet der meyr witte plantys. Mar nu as der meyr witten bint, wörd der ouk meyr licht torüggekaats en wörd et kolder. As et kolder is skeet de swarten ümhoche. De wearld wörd warmer ümdat der meyr sünlicht up-enöämen wörd. En so geyt et een heylen set verdan.
+Wonneyr as de sünne disse wearld beskent, wörd et heyter. Hyrdöär gröiet der meyr witte plantys. Mar nu as der meyr witten bint, wörd der ouk meyr licht torüggekaats en wörd et kolder. As et kolder is skeet de swarten ümhouge. De wearld wörd warmer ümdat der meyr sünlicht up-enöämen wörd. En so geyt et een heylen set verdan.
 
 Samen höylden sy up disse wyse de temperatuur good genog dat se med syn beiden konden leaven blyven.
 
 ===Mensken===
-Döärdat, med de 'bettere' technology en geneaskünde, in de tyd ouk meyr mensken der by kummet, kregt de aerde last van oaverbevolking van eyne soorte. Mensken jattet leavgebeden van andere soorten of, maket med ear fabryken de osonlåge stük en sörget der so vöär dat et lichaam (aerde) uut höär eavenwicht kümt. 
+Döärdat, med de 'bettere' technology en geneaskünde, in de tyd ouk meyr mensken der by kummet, kregt de aerde last van oaverbevolking van eyne soorte. Mensken jattet leavgebeden van andere soorten of, maket med ear fabryken de osonlåge stük en sörget der so vöär dat et lichaam (aerde) üüt höyr eavenwicht kümt. 
 
-Asset wy dit bekykt döär de Gaia-teory dan hebbet wy uutendelik allinnig unsülv der med. Want up disse wyse wörd der vöär esörgd dat de aerde te rap veranderd. So kan et leaven sich neet rap genog anpassen an de veranderings in et nye klimåt en leavgebeed. Dårdöär wörd et eavenwicht minder en geyt et leaven vansülv ouk vöär uns möilik wörden. Samen med uns solden wy düs vöäl ander leaven mednemmen. Gaia nemt 'wrake'. En as höär 'wrake' edåne is, sol sy gewoon wear verdan gån med et maken van ny leaven. So skrevt Lovelock et in eyne van syn nyste book ''De wraak van Gaia''.
+Asset wy dit bekykt döär de Gaia-teory dan hebbet wy üütendelik alleynig unssülv der med. Want up disse wyse wörd der vöär esörgd dat de aerde te rap veranderd. So kan et leaven sich neet rap genog anpassen an de veranderings in et nye klimåt en leavgebeed. Dårdöär wörd et eavenwicht minder en geyt et leaven vansülv ouk vöär uns möilik wörden. Samen med uns solden wy düs vöäl ander leaven mednemmen. Gaia nemt 'wrake'. En as höär 'wrake' edåne is, sol sy gewoon wear verdan gån med et maken van ny leaven. So skrevt Lovelock et in eyne van syn nyste book ''De wraak van Gaia''.
 
 ===De name===
 [[Gaia]] is de grykse [[Moder Eerde|Moder Aerde]]. In höär mytology wörd vertelt dat der in et begün der allinnig chaos was. De chaos bestünden uut alle elementen, toon as dissend allemåle by mekare kwamen is Gaia untståne. Gaia is dan ouk de (vergoddelikte) [[Aarde|Earde]]. Lovelocks nåbüür, den een skryver was, kwamt med de name Gaia ansetten.
