*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -89,6 +89,24 @@ Hee dröög flink wat by an ''Envoy, A Review of Literature and Art'' en was eyr
 
 Et meyste van syn latere wark was lösstånde skryvsels in tydskrivten. Vandår dat syn wark når verholding pas late up groute skåle untdekked wör döär literatuurkenners. O'Nolan was berücht üm syn uutvorige gebruuk en bedenken van pseudonymen vöär een grout deyl van syn wark, dat korte verhalen, verhandelingen en breyve an redaktören ümvatteden. Een vulleadig oaversicht van syn skryvwark maken is dårdöär håste unmöägelik. Vulgens brunnen skreyv hee breyve når de ''Irish Times'' üm te klagen oaver syne eygene artikels, byvöärbeyld syne vaste ''Cruiskeen Lawn''-column. En dår skreyv hee dan ouk wear lecht verbolgene, bysündere of selvs lecht gestoorde antwöörde up under andere skuulnaams. Dat sporeden wild giswark an oaver et echt bestån van nen breyvskryver of nit. Et sal nit verrassen dat der mär weinig van O'Nolans pseudonyme wark bekend is.
 
+==Naamsverklåring==
+O'Nolans journalistike pseudonym kümt van een personage (Myles-na-Coppaleen) in [[Dion Boucicault]] syn teaterstük ''[[The Colleen Bawn]]'' (wat selv wear ne oavername is van Gerald Griffin's ''The Collegians''). Et personage is een kenmarkende charmante yrsken bandyt. Up een seaker pünt in et stük, singt hey et olde leed van de Yrske Brigades up et vasteland: "An Crúiscín Lán". Dat is dan wear de naam van synen kolumn in de Irish Times.
+
+''Capall'' is et [[keltisk|yrske]] woord vöär "paerd" (afleidet van et [[latyn]]ske ''caballus'') med et verkleinwoord 'een' der achter (''ín'' up syn yrsk). Et [[prefix]] ''na gCapaillín'' is et genitive meyrvold in [[ulster-yrsk]]. Standaard yrsk sul hebben "Myles na gCapaillíní". Mär ''Capaillín'' is ouk yrsk vöär "pony", so as in et olde yrske paerderas de [[Connemarapony]]. Myles na gCopaleen is düs "Myles van de Kleine Paerdjes" of "Myles van de Ponys".
+
+O'Nolan selv stünd der altyd up dat et oaversat wör as "Myles van de Ponys", ümdat hee, so sea hee, nit saggen wårümme de pony in syne prinselikheid sul mütten bügen vöär et imperialisme van et paerd.
+
+==Fiction==
+
+===''At Swim-Two-Birds''===
+''At Swim-Two-Birds'' warket uutslutend med eleynde (en estöllene) karakters uut andere skryvwarken en legendes, med als argument dat der al vöäls te vöäle fiktyve karakters beståt.
+
+Et book wörd vandage den dag erkend as eyne van de belangrykste [[modernisme|modernistiske]] böyke van vöär [[1945]]. Et kan seen worden as een pioneerswark van et [[postmodernisme]]. Toch meynden den literatuurkenner Keith hopper dat ''The Third Policeman'', ofskoons up et eyrste gesichte minder radikaal, feitelik een meyr undermynend en proto-postmodernistisk wark is, en as sodöänig möägelik een vöärbeyld van [[literäre nonsens]].
+
+''At Swim-Two-Birds'' was eyne van de lätste böyke dee [[James Joyce]] löys vöärdat hee uut de tyd köäm en hee preys et an by al O'Nolans vreanden. Dat wör noch jåren up den ümslag van O'Briens böyke bruked. et book wör ouk epreysen döär [[Graham Greene]], den as korrektor was doo as et book inedeend wör vöär uutgave, en döär den argentynsken skryver [[Jorge Luis Borges]], wårvan at esegd wördt dat syn wark vöäle likt up dat van O'Brien.
+
+Den britsken skryver [[Anthony Burgess]] sea, "as wy et wark van Flann O'Brien nit kuusterd sint wy dumme klöyte, dee et nit verdenet üm groute lüde te kennen. Flann O'Brien is nen heylen groten." Burgess had ''At Swim-Two-Birds'' by up syne lyste van ''Neagenenneagentig Böyke: et Beste in et Engelsk seyt 1939''.
+
 ==Referensys==
 <references/>
 
