--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -7,7 +7,7 @@ O'Nolan was et grötste deyl van syn leaven alkoholist en knoiden up latere leav
 ==Leavensloup==
 
 ===Skooltyd===
-O'Nolan güng når Blackrock College wår hee engelsk leyreden van de höyvdmeister en tokumstige [[aartsbiskop]] [[John Charles McQuaid]].<ref>[http://catalogue.nli.ie/Record/vtls000029328 Farragher, Sean. Wyer, "Annrao. Blackrock College 1860-1995". Dublin, Paraclete Press (1995). ISBN 0946639191.</ref>
+O'Nolan güng når Blackrock College wår hee engelsk leyreden van de höyvdmeister en tokumstige [[aartsbiskop]] [[John Charles McQuaid]].<ref>[http://catalogue.nli.ie/Record/vtls000029328 Farragher, Sean. Wyer, "Annrao. Blackrock College 1860-1995". Dublin, Paraclete Press (1995). ISBN 0946639191.]</ref>
 
 Farragher en Wyer skryvet et volgende:
 
