--- a/Lotte_van_der_Zee.mw
+++ b/Lotte_van_der_Zee.mw
@@ -4,3 +4,6 @@
 February 2019 kreyg Van der Zee up wintersport een härtstilstand. See wör twey weaken lange kunstmåtig in [[koma]] hölden, wårnå he woonsdagåvend 6 maert uut de tyd köäm.
 
 {{Dialekt|sdz}}
+
+{{DEFAULTSORT:Zee, Lotte van der}}
+[[Kategorie:Nedersaksies model]]
