--- a/Lotte_van_der_Zee.mw
+++ b/Lotte_van_der_Zee.mw
@@ -7,3 +7,4 @@ February 2019 kreyg Van der Zee up wintersport een härtstilstand. See wör twey
 
 {{DEFAULTSORT:Zee, Lotte van der}}
 [[Kategorie:Nedersaksies model]]
+[[Kategorie:Tukker]]
