--- a/Zoerik.mw
+++ b/Zoerik.mw
@@ -1,13 +1,13 @@
 [[Ofbeelding:Zoerik_hellweg.jpg|thumb|In Zoerik heet den "heelweg" op Duuts groandgebeed "Helweg"]]
-'''Zoerik''' ([[Nederlands]]: ''Zuiderwijk'', [[Duuts]]: ''Suderwick'') is n darp in [[Duutslaand]], [[gemiente (bestuur)|gemeente]] [[Bokelt]], op de grenze mit [[Nederlaand]]. Op [[1 januari]] [[2005]] hadden zie 1.863 inwonners.
+'''Zoerik''' ([[Nederlands]]: ''Zuiderwijk'', [[Duuts]]: ''Suderwick'') is een darp in [[Duutslaand|Duutsland]], [[gemiente (bestuur)|gemeente]] [[Bokelt]], op de grenze mit [[Nederlaand|Nederland]]. Op [[1 januari]] [[2005]] hadden zee 1.863 inwonners.
 
 ==Tweelingdarp==
-Et [[darp]] vörmt mit et Nederlandse [[Dinsper]] (gemeente [[Aalten]]) n tweelingdarp: de [[Rieksgrenze van Nederlaand|landsgrenze]] löp dwars deur den bebouwden kom en volgt veur n groot deel den Heelweg, dee tot an de stoepe Nederlandse groandgebeed is. Et is doarmet de enige plaatse woar Duutse börgers in ne Nederlaandse stroate wont.
-Doar is sinds olde tieden sproake van deepgoande grensoaverschriedende samenwarking. Uutzunderlek moar neet uniek is et gezamenlek Nederlaands-Duutse [[politie]]buro in Dinsper.
-En de Zoerikse kinder goat doar noar de Nederlaandse basis-skole.
+Et [[darp]] vörmt met et Nederlandse [[Dinsper]] (gemeente [[Aalten]]) een tweelingdarp: de [[Rieksgrenze van Nederlaand|landsgrenze]] löp dwars deur den bebouwden kom en volgt veur een groot deel den Heelweg, dee tot an de stoepe Nederlandse grondgebeed is. Et is daormet de enige plaatse waor Duutse börgers in 'ne Nederlaandse straote wont.
+Daor is sinds olde tieden spraoke van deepgoande grensaoverschriedende samenwarking. Uutzunderlik maor neet uniek is et gezamenlik Nederlaands-Duutse [[politie]]buro in Dinsper.
+En de Zoerikse kinder gaot nao de Nederlandse basis-schole.
 
 ==Nederlaandsen annexatie==
-In [[1949]] wöd et grootste deel van Zoerik, samen met wat andere Duutsen grensdarpen en -gebeden deur Nederlaand [[Nederlandse annexatie van Duuts groandgebeed noa den Tweeden Wealdoorlog|annexeerd]] bi-j wieze van schadeloosstelling veur den [[Tweede Wereldoorlog|Tweeden Wealdkrieg]]. In [[1963]] wodden et wier an Duutslaand trög-egoaven en hereanegd mit den rest van et darp. In [[1969]] wodden Zoerik as zelfstandege [[gemiente (bestuur)|gemeente]] op-eheaven en bi-j [[Bocholt]] edoane. Deur et [[Verdrag van Schengen]] is de zichtbaore grenze tussen Zoerik en Dinsper vort egaone.
+In [[1949]] wörd et grootste deel van Zoerik, samen met wat andere Duutse grensdarpen en -gebeden deur Nederlaand [[Nederlandse annexatie van Duuts groandgebeed noa den Tweeden Wealdoorlog|annexeerd]] bi-j wieze van schadeloosstelling veur den [[Tweede Wereldoorlog|Tweeden Waeldkrieg]]. In [[1963]] wordden et weer an Duutslaand weer-egeven en herenigd met den rest van et darp. In [[1969]] wordden Zoerik as zelfstandege [[gemiente (bestuur)|gemeente]] op-ehaeven en bi-j [[Bocholt|Bokelt]] edoane. Deur et [[Verdrag van Schengen]] is de zichtbaore grenze tussen Zoerik en Dinsper vort-egaone.
 
 {{Commons|Category:Suderwick}}
 
