/* Nederlaandsen annexatie */ Achterhooks land ipv Twents laand; -e ipv -en (annexatie is vrouwelik)

--- a/Zoerik.mw
+++ b/Zoerik.mw
@@ -6,7 +6,7 @@ Et [[darp]] vörmt met et Nederlandse [[Dinsper]] (gemeente [[Aalten]]) een twee
 Daor is sinds olde tieden spraoke van deepgoande grensaoverschriedende samenwarking. Uutzunderlik maor neet uniek is et gezamenlik Nederlaands-Duutse [[politie]]buro in Dinsper.
 En de Zoerikse kinder gaot nao de Nederlandse basis-schole.
 
-==Nederlaandsen annexatie==
+==Nederlandse annexatie==
 In [[1949]] wörd et grootste deel van Zoerik, samen met wat andere Duutse grensdarpen en -gebeden deur Nederlaand [[Nederlandse annexatie van Duuts groandgebeed noa den Tweeden Wealdoorlog|annexeerd]] bi-j wieze van schadeloosstelling veur den [[Tweede Wereldoorlog|Tweeden Waeldkrieg]]. In [[1963]] wordden et weer an Duutslaand weer-egeven en herenigd met den rest van et darp. In [[1969]] wordden Zoerik as zelfstandege [[gemiente (bestuur)|gemeente]] op-ehaeven en bi-j [[Bocholt|Bokelt]] edoane. Deur et [[Verdrag van Schengen]] is de zichtbaore grenze tussen Zoerik en Dinsper vort-egaone.
 
 {{Commons|Category:Suderwick}}
